[package]
name = "mongo-file-center"
version = "0.3.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/mongo-file-center"
homepage = "https://magiclen.org/mongo-file-center"
keywords = ["mongodb", "storage", "file"]
categories = ["filesystem", "database"]
description= "To store perennial files and temporary files in MongoDB."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/mongo-file-center"
branch = "master"

[dependencies]
mongodb = "0.4"
bson = "0.14"
short-crypt = "1.0.7"
lazy_static = "1.1.0"
chrono = "0.4.6"
sha3 = "0.8.1"
mime = "0.3.13"
mime_guess = "2"
rand = "0.7"