[package]
name = "mongo-file-center"
version = "0.5.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/mongo-file-center"
homepage = "https://magiclen.org/mongo-file-center"
keywords = ["mongodb", "storage", "file"]
categories = ["filesystem", "database"]
description = "To store perennial files and temporary files in MongoDB."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
short-crypt = "1.0.25"
chrono = "0.4.6"
sha3 = "0.9"
mime = "0.3.16"
mime_guess = "2"
rand = "0.8"

r2d2 = "0.8"
mongodb_cwal = "0.6.7"
bson = "0.14"

[dev-dependencies]
slash-formatter = "3.1.2"