[package]
name = "mongo-file-center"
version = "0.6.1"
edition = "2021"
repository = "https://github.com/magiclen/mongo-file-center"
homepage = "https://magiclen.org/mongo-file-center"
keywords = ["mongodb", "storage", "file"]
categories = ["filesystem", "database"]
description = "To store perennial files and temporary files in MongoDB."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
tokio = { version = "1", features = ["fs", "io-util"] }
tokio-stream = "0.1.7"

mongodb = "2"
bson = "2.0.1"

sha2 = "0.9.8"
mime = "0.3.16"
mime_guess = "2"
short-crypt = "1.0.25"

[dependencies.educe]
version = ">= 0.4.18"
features = ["Debug"]
default-features = false

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tokio-util = { version = "0.6.8", features = ["io"] }
manifest-dir-macros = "0.1"
slash-formatter = "3.1.2"

[dev-dependencies.same-content]
version = "0.1.7"
features = ["tokio"]